Add expect patches, fix tcl/expect/dejagnu, NVIDIA open modules
- Add Arch Linux patches for expect (Public Domain/BSD-0):
  - expect-c99.patch: Tcl channel API compatibility
  - expect-configure-c99.patch: C99 configure fixes
  - expect-5.45.4-covscan-fixes.patch: Static analysis fixes
  - expect-5.45-format-security.patch: Format security fix

- Update tcl to 8.6.17

- Fix expect build for GCC 14+:
  - Use -std=gnu89 for K&R C compatibility
  - Apply Arch Linux patches

- Fix dejagnu to depend on real expect (not expectrl-tcl)

- Add NVIDIA open kernel modules packages:
  - nvidia-open: Production branch (580.126.09)
  - nvidia-open-latest: New feature branch (590.48.01)
  - Uses open-source kernel modules from GitHub
  - Userspace libs from .run file
  - skip_optimization for kernel module build

- Fix linux kernel package:
  - Patch to export __stack_chk_guard for SMP (NVIDIA compatibility)
  - Install kernel headers for out-of-tree module builds
  - Create proper directory structure for headers

- pk-common: Fix parse_pkgname to handle .pk.tar.xz extension
- pk-download: Add extra_sources support
- pk-build: Export SOURCES_DIR for build commands

--- a/packages/d.toml
+++ b/packages/d.toml
@@ -64,14 +64,13 @@ git_url = "https://github.com/dejavu-fonts/dejavu-fonts.git"
 use_git = false
 stage = 11
 
-# DejaGnu now works with expectrl-tcl
 [packages.dejagnu]
 version = "1.6.3"
 version_check = "gnu:dejagnu"
 description = "GNU testing framework"
 url = "https://ftpmirror.gnu.org/gnu/dejagnu/dejagnu-${version}.tar.gz"
 stage = 10
-depends = ["tcl", "expectrl-tcl"]
+depends = ["tcl", "expect"]
 build_commands = [
     "./configure --prefix=/usr",
     "make",
