--- a/packages/l.toml
+++ b/packages/l.toml
@@ -201,15 +201,27 @@ depends = ["elfutils"]
 build_system = "custom"
 build_commands = [
     "make mrproper",
+    # Patch: export __stack_chk_guard for SMP builds (needed for NVIDIA and other out-of-tree modules)
+    "sed -i '/#ifndef CONFIG_SMP/,/#endif/{/#ifndef CONFIG_SMP/d;/#endif/d}' arch/x86/kernel/cpu/common.c",
     "make defconfig",
-    "scripts/config --enable CONFIG_VGA_CONSOLE --enable CONFIG_FRAMEBUFFER_CONSOLE --enable CONFIG_FB --enable CONFIG_FB_EFI --enable CONFIG_FB_VESA --enable CONFIG_DRM --enable CONFIG_DRM_VIRTIO_GPU --enable CONFIG_VIRTIO_PCI --enable CONFIG_VIRTIO_MMIO --enable CONFIG_EXT4_FS --enable CONFIG_EFIVAR_FS --enable CONFIG_EFI_PARTITION --enable CONFIG_BLK_DEV_NVME --enable CONFIG_NVME_CORE --enable CONFIG_SATA_AHCI --enable CONFIG_ATA_PIIX --enable CONFIG_DEVTMPFS --enable CONFIG_DEVTMPFS_MOUNT --enable CONFIG_TMPFS --enable CONFIG_NET --enable CONFIG_INET --enable CONFIG_NETDEVICES --enable CONFIG_VIRTIO_NET --enable CONFIG_E1000 --enable CONFIG_E1000E --enable CONFIG_IGC --enable CONFIG_R8169 --enable CONFIG_REALTEK_PHY --enable CONFIG_WIRELESS --enable CONFIG_CFG80211 --enable CONFIG_MAC80211 --enable CONFIG_IWLWIFI --enable CONFIG_IWLMVM --enable CONFIG_USB --enable CONFIG_USB_XHCI_HCD --enable CONFIG_USB_EHCI_HCD --enable CONFIG_INPUT_EVDEV --enable CONFIG_HID --enable CONFIG_USB_HID --enable CONFIG_FW_LOADER --enable CONFIG_EXTRA_FIRMWARE_DIR=/lib/firmware",
+    "scripts/config --enable CONFIG_VGA_CONSOLE --enable CONFIG_FRAMEBUFFER_CONSOLE --enable CONFIG_FB --enable CONFIG_FB_EFI --enable CONFIG_FB_VESA --enable CONFIG_DRM --enable CONFIG_DRM_FBDEV_EMULATION --enable CONFIG_DRM_VIRTIO_GPU --enable CONFIG_DRM_NOUVEAU --enable CONFIG_VIRTIO_PCI --enable CONFIG_VIRTIO_MMIO --enable CONFIG_EXT4_FS --enable CONFIG_EFIVAR_FS --enable CONFIG_EFI_PARTITION --enable CONFIG_BLK_DEV_NVME --enable CONFIG_NVME_CORE --enable CONFIG_SATA_AHCI --enable CONFIG_ATA_PIIX --enable CONFIG_DEVTMPFS --enable CONFIG_DEVTMPFS_MOUNT --enable CONFIG_TMPFS --enable CONFIG_NET --enable CONFIG_INET --enable CONFIG_NETDEVICES --enable CONFIG_VIRTIO_NET --enable CONFIG_E1000 --enable CONFIG_E1000E --enable CONFIG_IGC --enable CONFIG_R8169 --enable CONFIG_REALTEK_PHY --enable CONFIG_WIRELESS --enable CONFIG_CFG80211 --enable CONFIG_MAC80211 --enable CONFIG_IWLWIFI --enable CONFIG_IWLMVM --enable CONFIG_USB --enable CONFIG_USB_XHCI_HCD --enable CONFIG_USB_EHCI_HCD --enable CONFIG_INPUT_EVDEV --enable CONFIG_HID --enable CONFIG_USB_HID --enable CONFIG_FW_LOADER --enable CONFIG_EXTRA_FIRMWARE_DIR=/lib/firmware --enable CONFIG_MODULES --enable CONFIG_MODULE_UNLOAD --enable CONFIG_MODVERSIONS",
     "make olddefconfig",
     "make -j${NPROC}",
     "make INSTALL_MOD_PATH=${PKG} modules_install",
-    "mkdir -p ${PKG}/boot",
+    "mkdir -p ${PKG}/boot ${PKG}/usr/src/linux-${version}",
     "cp arch/x86/boot/bzImage ${PKG}/boot/vmlinuz-${version}",
     "cp System.map ${PKG}/boot/System.map-${version}",
-    "cp .config ${PKG}/boot/config-${version}"
+    "cp .config ${PKG}/boot/config-${version}",
+    # Install kernel headers for out-of-tree module builds
+    "cp -a include ${PKG}/usr/src/linux-${version}/",
+    "mkdir -p ${PKG}/usr/src/linux-${version}/arch/x86",
+    "cp -a arch/x86/include ${PKG}/usr/src/linux-${version}/arch/x86/",
+    "mkdir -p ${PKG}/usr/src/linux-${version}/tools",
+    "cp -a scripts ${PKG}/usr/src/linux-${version}/",
+    "cp -a tools/objtool ${PKG}/usr/src/linux-${version}/tools/",
+    "cp Makefile Kconfig Module.symvers ${PKG}/usr/src/linux-${version}/",
+    "mkdir -p ${PKG}/lib/modules/${version}",
+    "ln -sf /usr/src/linux-${version} ${PKG}/lib/modules/${version}/build"
 ]
 provides = ["/boot/vmlinuz-${version}"]
 
