--- a/packages/t.toml
+++ b/packages/t.toml
@@ -14,15 +14,15 @@ build_commands = [
 ]
 
 [packages.tcl]
-version = "8.6.16"
-version_check = "url:https://www.tcl.tk/software/tcltk/download.html|Tcl/Tk ([0-9]+\\.[0-9]+\\.[0-9]+)"
+version = "8.6.17"
+version_check = "url:https://www.tcl-lang.org/software/tcltk/download.html|Tcl/Tk ([0-9]+\\.[0-9]+\\.[0-9]+)"
 description = "Tool Command Language"
 url = "https://prdownloads.sourceforge.net/tcl/tcl${version}-src.tar.gz"
 git_url = "https://github.com/tcltk/tcl.git"
 use_git = false
 stage = 10
 source_dir = "tcl${version}"
-# Disable fast-math/LTO due to libm linking issues
+skip_optimization = true
 build_commands = [
     "cd ${srcdir}/unix && CFLAGS='-O3 -march=znver3 -pipe' LDFLAGS='' ./configure --prefix=/usr --enable-threads --enable-64bit --mandir=/usr/share/man",
     "cd ${srcdir}/unix && make -j${NPROC}",
